log/include/uapi/sound/sof/header.h.log
commit 62ec3d13601bd626ca7a0edef6d45dbb753d94e8
Author: Masahiro Yamada <yamada.masahiro@socionext.com>
Date:   Sun Jul 21 23:23:08 2019 +0900

    ASoC: SOF: use __u32 instead of uint32_t in uapi headers
    
    When CONFIG_UAPI_HEADER_TEST=y, exported headers are compile-tested to
    make sure they can be included from user-space.
    
    Currently, header.h and fw.h are excluded from the test coverage.
    To make them join the compile-test, we need to fix the build errors
    attached below.
    
    For a case like this, we decided to use __u{8,16,32,64} variable types
    in this discussion:
    
      https://lkml.org/lkml/2019/6/5/18
    
    Build log:
    
      CC      usr/include/sound/sof/header.h.s
      CC      usr/include/sound/sof/fw.h.s
    In file included from <command-line>:32:0:
    ./usr/include/sound/sof/header.h:19:2: error: unknown type name ‘uint32_t’
      uint32_t magic;  /**< 'S', 'O', 'F', '\0' */
      ^~~~~~~~
    ./usr/include/sound/sof/header.h:20:2: error: unknown type name ‘uint32_t’
      uint32_t type;  /**< component specific type */
      ^~~~~~~~
    ./usr/include/sound/sof/header.h:21:2: error: unknown type name ‘uint32_t’
      uint32_t size;  /**< size in bytes of data excl. this struct */
      ^~~~~~~~
    ./usr/include/sound/sof/header.h:22:2: error: unknown type name ‘uint32_t’
      uint32_t abi;  /**< SOF ABI version */
      ^~~~~~~~
    ./usr/include/sound/sof/header.h:23:2: error: unknown type name ‘uint32_t’
      uint32_t reserved[4]; /**< reserved for future use */
      ^~~~~~~~
    ./usr/include/sound/sof/header.h:24:2: error: unknown type name ‘uint32_t’
      uint32_t data[0]; /**< Component data - opaque to core */
      ^~~~~~~~
    In file included from <command-line>:32:0:
    ./usr/include/sound/sof/fw.h:49:2: error: unknown type name ‘uint32_t’
      uint32_t size;  /* bytes minus this header */
      ^~~~~~~~
    ./usr/include/sound/sof/fw.h:50:2: error: unknown type name ‘uint32_t’
      uint32_t offset; /* offset from base */
      ^~~~~~~~
    ./usr/include/sound/sof/fw.h:64:2: error: unknown type name ‘uint32_t’
      uint32_t size;  /* bytes minus this header */
      ^~~~~~~~
    ./usr/include/sound/sof/fw.h:65:2: error: unknown type name ‘uint32_t’
      uint32_t num_blocks; /* number of blocks */
      ^~~~~~~~
    ./usr/include/sound/sof/fw.h:73:2: error: unknown type name ‘uint32_t’
      uint32_t file_size; /* size of file minus this header */
      ^~~~~~~~
    ./usr/include/sound/sof/fw.h:74:2: error: unknown type name ‘uint32_t’
      uint32_t num_modules; /* number of modules */
      ^~~~~~~~
    ./usr/include/sound/sof/fw.h:75:2: error: unknown type name ‘uint32_t’
      uint32_t abi;  /* version of header format */
      ^~~~~~~~
    
    Signed-off-by: Masahiro Yamada <yamada.masahiro@socionext.com>
    Link: https://lore.kernel.org/r/20190721142308.30306-1-yamada.masahiro@socionext.com
    Signed-off-by: Mark Brown <broonie@kernel.org>

diff --git a/include/uapi/sound/sof/header.h b/include/uapi/sound/sof/header.h
index 7868990b0d6f..5f4518e7a972 100644
--- a/include/uapi/sound/sof/header.h
+++ b/include/uapi/sound/sof/header.h
@@ -9,6 +9,8 @@
 #ifndef __INCLUDE_UAPI_SOUND_SOF_USER_HEADER_H__
 #define __INCLUDE_UAPI_SOUND_SOF_USER_HEADER_H__
 
+#include <linux/types.h>
+
 /*
  * Header for all non IPC ABI data.
  *
@@ -16,12 +18,12 @@
  * Used by any bespoke component data structures or binary blobs.
  */
 struct sof_abi_hdr {
-	uint32_t magic;		/**< 'S', 'O', 'F', '\0' */
-	uint32_t type;		/**< component specific type */
-	uint32_t size;		/**< size in bytes of data excl. this struct */
-	uint32_t abi;		/**< SOF ABI version */
-	uint32_t reserved[4];	/**< reserved for future use */
-	uint32_t data[0];	/**< Component data - opaque to core */
+	__u32 magic;		/**< 'S', 'O', 'F', '\0' */
+	__u32 type;		/**< component specific type */
+	__u32 size;		/**< size in bytes of data excl. this struct */
+	__u32 abi;		/**< SOF ABI version */
+	__u32 reserved[4];	/**< reserved for future use */
+	__u32 data[0];		/**< Component data - opaque to core */
 }  __packed;
 
 #endif

commit 4483151e765b5a7ffb823fe9bb11128101410427
Author: Liam Girdwood <liam.r.girdwood@linux.intel.com>
Date:   Fri Apr 12 11:05:15 2019 -0500

    ASoC: SOF: Add userspace ABI support
    
    Add userspace ABI for audio userspace application IO outside of regular
    ALSA PCM and kcontrols. This is intended to be used to format
    coefficients and data for custom processing components.
    
    Signed-off-by: Liam Girdwood <liam.r.girdwood@linux.intel.com>
    Signed-off-by: Pierre-Louis Bossart <pierre-louis.bossart@linux.intel.com>
    Reviewed-by: Takashi Iwai <tiwai@suse.de>
    Signed-off-by: Mark Brown <broonie@kernel.org>

diff --git a/include/uapi/sound/sof/header.h b/include/uapi/sound/sof/header.h
new file mode 100644
index 000000000000..7868990b0d6f
--- /dev/null
+++ b/include/uapi/sound/sof/header.h
@@ -0,0 +1,27 @@
+/* SPDX-License-Identifier: ((GPL-2.0 WITH Linux-syscall-note) OR BSD-3-Clause) */
+/*
+ * This file is provided under a dual BSD/GPLv2 license.  When using or
+ * redistributing this file, you may do so under either license.
+ *
+ * Copyright(c) 2018 Intel Corporation. All rights reserved.
+ */
+
+#ifndef __INCLUDE_UAPI_SOUND_SOF_USER_HEADER_H__
+#define __INCLUDE_UAPI_SOUND_SOF_USER_HEADER_H__
+
+/*
+ * Header for all non IPC ABI data.
+ *
+ * Identifies data type, size and ABI.
+ * Used by any bespoke component data structures or binary blobs.
+ */
+struct sof_abi_hdr {
+	uint32_t magic;		/**< 'S', 'O', 'F', '\0' */
+	uint32_t type;		/**< component specific type */
+	uint32_t size;		/**< size in bytes of data excl. this struct */
+	uint32_t abi;		/**< SOF ABI version */
+	uint32_t reserved[4];	/**< reserved for future use */
+	uint32_t data[0];	/**< Component data - opaque to core */
+}  __packed;
+
+#endif
